Update for entries with no keys

--- a/bibfiles/bibfile1.bib
+++ b/bibfiles/bibfile1.bib
@@ -1,4 +1,4 @@
-@article{doe2021quantum,
+@article{doe2022quantum,
   author  = {Doe, John},
   title   = {Quantum entanglement and its applications in cryptography},
   year    = {2022}
@@ -10,4 +10,11 @@
   journal = {arXiv preprint},
   title   = {The role of gut microbiota in human health and disease},
   year    = {2015},
+}
+
+@article{
+    author = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez, Alexander},
+    journal = {Journal of the American Chemical Society},
+    year = {2019},
+    title = {The effects of air pollution on respiratory health in urban populations},
 }
