--- a/merged.bib
+++ b/merged.bib
@@ -1,17 +1,17 @@
-@article{davis2020machine,
-  author  = {Davis, Olivia and Chen, William and Rodriguez, Sophia},
-  journal = {Nature},
-  eprint  = {1901.00000},
-  title   = {Machine learning for predicting protein-protein interactions},
-  year    = {2020},
-}
-
-@misc{doe2021quantum,
+@misc{doe2022quantum,
   author  = {Doe, John},
   title   = {Quantum entanglement and its applications in cryptography},
   year    = {2023},
   journal = {PRX Quantum},
   doi     = {10.0000/PRXQuantum.1.00000},
+}
+
+@article{davis2020machine,
+  author  = {Davis, Olivia and Chen, William and Rodriguez, Sophia},
+  journal = {Nature},
+  title   = {Machine learning for predicting protein-protein interactions},
+  year    = {2020},
+  eprint  = {1901.00000},
 }
 
 @article{johnson2015role,
@@ -20,5 +20,12 @@
   journal = {arXiv preprint},
   title   = {The role of gut microbiota in human health and disease},
   year    = {2015},
+}
+
+@article{patel2019the,
+  author  = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez, Alexander},
+  journal = {Journal of the American Chemical Society},
+  year    = {2019},
+  title   = {The effects of air pollution on respiratory health in urban populations},
 }
 
