Format long values

--- a/bibfiles/bibfile1.bib
+++ b/bibfiles/bibfile1.bib
@@ -1,7 +1,8 @@
 @article{doe2022quantum,
   author  = {Doe, John},
   title   = {Quantum entanglement and its applications in cryptography},
-  year    = {2022}
+  year    = {2022},
+  abstract = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam porta velit vel imperdiet. Aliquam egestas, diam et blandit scelerisque, tellus enim fringilla ipsum, non elementum neque eros vel nibh. Proin id leo tellus. Nullam non tristique elit. Aliquam commodo ante venenatis, vehicula augue vel, ultrices nisl. Etiam magna erat, semper et auctor in, imperdiet id nisl. Sed interdum tempor nulla, feugiat commodo libero congue a. In congue mauris vitae eros lobortis accumsan. Cras venenatis velit nec tellus commodo, a malesuada eros suscipit. Mauris tristique nibh ante, eget dictum mi pretium quis. Etiam euismod nisi libero, vitae porta eros gravida non.}
 }
 
 @article{johnson2015role,
