--- a/merged.bib
+++ b/merged.bib
@@ -1,30 +1,41 @@
 @article{davis2020machine,
-    author  = {Davis, Olivia and Chen, William and Rodriguez, Sophia},
-    eprint  = {1901.00000},
-    journal = {Nature},
-    title   = {Machine learning for predicting protein-protein interactions},
-    year    = {2020},
+    author      = {Davis, Olivia and Chen, William and Rodriguez, Sophia},
+    eprint      = {1901.00000},
+    journal     = {Nature},
+    title       = {Machine learning for predicting protein-protein interactions},
+    year        = {2020},
 }
 
 @misc{doe2022quantum,
-    author  = {Doe, John},
-    doi     = {10.0000/PRXQuantum.1.00000},
-    journal = {PRX Quantum},
-    title   = {Quantum entanglement and its applications in cryptography},
-    year    = {2023},
+    abstract    = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+        aliquam porta velit vel imperdiet. Aliquam egestas, diam et blandit
+        scelerisque, tellus enim fringilla ipsum, non elementum neque eros vel nibh.
+        Proin id leo tellus. Nullam non tristique elit. Aliquam commodo ante venenatis,
+        vehicula augue vel, ultrices nisl. Etiam magna erat, semper et auctor in,
+        imperdiet id nisl. Sed interdum tempor nulla, feugiat commodo libero congue a.
+        In congue mauris vitae eros lobortis accumsan. Cras venenatis velit nec tellus
+        commodo, a malesuada eros suscipit. Mauris tristique nibh ante, eget dictum mi
+        pretium quis. Etiam euismod nisi libero, vitae porta eros gravida non.},
+    author      = {Doe, John},
+    doi         = {10.0000/PRXQuantum.1.00000},
+    journal     = {PRX Quantum},
+    title       = {Quantum entanglement and its applications in cryptography},
+    year        = {2023},
 }
 
 @article{johnson2015role,
-    author  = {Johnson, Emma and Lee, Alexander},
-    eprint  = {2201.00000},
-    journal = {arXiv preprint},
-    title   = {The role of gut microbiota in human health and disease},
-    year    = {2015},
+    author      = {Johnson, Emma and Lee, Alexander},
+    eprint      = {2201.00000},
+    journal     = {arXiv preprint},
+    title       = {The role of gut microbiota in human health and disease},
+    year        = {2015},
 }
 
 @article{patel2019the,
-    author  = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez, Alexander},
-    journal = {Journal of the American Chemical Society},
-    title   = {The effects of air pollution on respiratory health in urban populations},
-    year    = {2019},
+    author      = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez,
+        Alexander},
+    journal     = {Journal of the American Chemical Society},
+    title       = {The effects of air pollution on respiratory health in urban
+        populations},
+    year        = {2019},
 }
