--- a/merged.bib
+++ b/merged.bib
@@ -7,15 +7,7 @@
 }
 
 @misc{doe2022quantum,
-    abstract    = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-        aliquam porta velit vel imperdiet. Aliquam egestas, diam et blandit
-        scelerisque, tellus enim fringilla ipsum, non elementum neque eros vel nibh.
-        Proin id leo tellus. Nullam non tristique elit. Aliquam commodo ante venenatis,
-        vehicula augue vel, ultrices nisl. Etiam magna erat, semper et auctor in,
-        imperdiet id nisl. Sed interdum tempor nulla, feugiat commodo libero congue a.
-        In congue mauris vitae eros lobortis accumsan. Cras venenatis velit nec tellus
-        commodo, a malesuada eros suscipit. Mauris tristique nibh ante, eget dictum mi
-        pretium quis. Etiam euismod nisi libero, vitae porta eros gravida non.},
+    abstract    = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquam porta velit vel imperdiet. Aliquam egestas, diam et blandit scelerisque, tellus enim fringilla ipsum, non elementum neque eros vel nibh. Proin id leo tellus. Nullam non tristique elit. Aliquam commodo ante venenatis, vehicula augue vel, ultrices nisl. Etiam magna erat, semper et auctor in, imperdiet id nisl. Sed interdum tempor nulla, feugiat commodo libero congue a. In congue mauris vitae eros lobortis accumsan. Cras venenatis velit nec tellus commodo, a malesuada eros suscipit. Mauris tristique nibh ante, eget dictum mi pretium quis. Etiam euismod nisi libero, vitae porta eros gravida non.},
     author      = {Doe, John},
     doi         = {10.0000/PRXQuantum.1.00000},
     journal     = {PRX Quantum},
@@ -32,10 +24,9 @@
 }
 
 @article{patel2019the,
-    author      = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez,
-        Alexander},
+    author      = {Patel, Olivia and Singh, Ethan and Davis, Sophia and Martinez, Alexander},
     journal     = {Journal of the American Chemical Society},
-    title       = {The effects of air pollution on respiratory health in urban
-        populations},
+    title       = {The effects of air pollution on respiratory health in urban populations},
     year        = {2019},
 }
+
